--- a/src/main/resources/templates/room/room.html
+++ b/src/main/resources/templates/room/room.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 <link rel="styleSheet" href="css/style.css" type="text/css" media="screen">
@@ -15,11 +15,11 @@
 				<h1>Join a Room</h1>
 				<form onsubmit="register(); return false;" accept-charset="UTF-8">
 					<p>
-						<input type="text" name="name" value="" id="name"
+						<input type="text" name="name" value=${userId} id="name"
 							placeholder="Username" required>
 					</p>
 					<p>
-						<input type="text" name="room" value="" id="roomName"
+						<input type="text" name="room" value=${groupId} id="roomName"
 							placeholder="Room" required>
 					</p>
 					<p class="submit">
