图标问题修改 登陆窗口问题修改 退出时，关闭窗口异常问题处理 配置文件修改 MD文档更新 springboot 升级，解决tomcat 异常问题

--- a/src/main/resources/templates/room/room.html
+++ b/src/main/resources/templates/room/room.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="container">
 		<div id="wrapper">
-			<div id="join" class="animate join">
+			<div id="join" class="animate join" display="none">
 				<h1>Join a Room</h1>
 				<form onsubmit="register(); return false;" accept-charset="UTF-8">
 					<p>
