群聊视频页面调整 websocket 异常断开问题处理

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -434,7 +434,7 @@ a.hovertext:hover:after, a.hovertext:focus:after {
 }
 .participant video{
     width: 100%;
-    /*height: 100%;*/
+    height: 100%;
 }
 .participant span{
     width: 100%;
