--- a/src/main/resources/templates/room/room.html
+++ b/src/main/resources/templates/room/room.html
@@ -1,6 +1,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link rel="stylesheet"	href="webjars/bootstrap/dist/css/bootstrap.min.css">
 <link rel="styleSheet" href="iconfont/iconfont.css" type="text/css" media="screen">
 <link rel="styleSheet" href="css/style.css" type="text/css" media="screen">
@@ -24,14 +26,30 @@
 				<h1>Join a Room</h1>
 				<form onsubmit="register(); return false;" accept-charset="UTF-8">
 					<p>
-						<input type="text" name="name" value=${userId} id="name" required >
+						<input type="text" name="name" th:value="${userId}"  id="name" required />
 					</p>
 					<p>
-						<input type="text" name="room" value=${groupId} id="roomName" required >
+						<input type="text" name="userName"  th:value="${userName}"  id="userName" required />
+					</p>
+					<p>
+						<input type="text" name="roomId"  th:value="${groupId}"  id="roomId" required />
+					</p>
+					<p>
+						<input type="text" name="roomName"  th:value="${groupName}"  id="roomName" required />
 					</p>
 					<p class="submit">
-						<input type="submit" name="commit" value="Join!" display="none">
+						<input type="submit" name="commit" value="Join!" display="none"/>
 					</p>
+					<p>
+						<input type="radio" name="mode" value="video-and-audio"  checked="checked"/> Video and audio
+					</p>
+					<p>
+						<input type="radio" name="mode" value="video-only"/> Video only
+					</p>
+					<p>
+						<input	type="radio" name="mode" value="audio-only"/> Audio only
+					</p>
+
 				</form>
 			</div>
 
@@ -43,13 +61,13 @@
 				<div class="room-footer">
 					<ul class="clearfix">
 						<li>
-							<a class="operationButton" id="aaa" onmouseup="closeVideo()">
+							<a class="operationButton" id="audioOnly" onmouseup="audioOnly()">
 								<i class="iconfont iconshipingjinzhi-copy"></i>
 							</a>
 							<p class="text">关闭视频</p>
 						</li>
 						<li>
-							<a class="operationButton" id="bbb" onmouseup="silentMode()">
+							<a class="operationButton" id="videoOnly" onmouseup="videoOnly()">
 								<i class="iconfont iconjingyin"></i>
 							</a>
 							<p class="text">静音</p>
@@ -66,6 +84,9 @@
 		</div>
 
 	</div>
-	<script src="./js/modifystylecss.js"></script>
+	<script th:inline="javascript">
+		var username = [[${userName}]];
+		console.log(username)
+	</script>
 </body>
 </html>
