1、静音，关闭画面功能

--- a/src/main/resources/templates/room/room.html
+++ b/src/main/resources/templates/room/room.html
@@ -61,13 +61,13 @@
 				<div class="room-footer">
 					<ul class="clearfix">
 						<li>
-							<a class="operationButton" id="audioOnly" onmouseup="audioOnly()">
+							<a class="operationButton" id="audioOnly" onmouseup="excuteVideoStream()">
 								<i class="iconfont iconshipingjinzhi-copy"></i>
 							</a>
 							<p class="text">关闭视频</p>
 						</li>
 						<li>
-							<a class="operationButton" id="videoOnly" onmouseup="videoOnly()">
+							<a class="operationButton" id="videoOnly" onmouseup="excuteAudioStream()">
 								<i class="iconfont iconjingyin"></i>
 							</a>
 							<p class="text">静音</p>
