1、群聊页面中，只有两个人时，有一个退出，剩余人的页面渲染问题修改； 2、点击开启视频，静音后按钮字体变动修改

--- a/src/main/resources/templates/room/room.html
+++ b/src/main/resources/templates/room/room.html
@@ -61,16 +61,16 @@
 				<div class="room-footer">
 					<ul class="clearfix">
 						<li>
-							<a class="operationButton" id="audioOnly" onmouseup="excuteVideoStream()">
+							<a class="operationButton" onmouseup="excuteVideoStream()">
 								<i class="iconfont iconshipingjinzhi-copy"></i>
 							</a>
-							<p class="text">关闭视频</p>
+							<p class="text" id="audioOnly" >关闭视频</p>
 						</li>
 						<li>
-							<a class="operationButton" id="videoOnly" onmouseup="excuteAudioStream()">
+							<a class="operationButton"onmouseup="excuteAudioStream()">
 								<i class="iconfont iconjingyin"></i>
 							</a>
-							<p class="text">静音</p>
+							<p class="text"  id="videoOnly" >静音</p>
 						</li>
 						<li>
 							<a class="operationButton" id="button-leave" onmouseup="leaveRoom()">
