--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -424,7 +424,7 @@ a.hovertext:hover:after, a.hovertext:focus:after {
 }
 #participants{
     width: 100%;
-    /*height: 100%;*/
+    height: 100%;
     position: relative;
 }
 .participant{
