--- a/src/main/resources/static/css/kurento.css
+++ b/src/main/resources/static/css/kurento.css
@@ -1,19 +1,3 @@
-/*
- * (C) Copyright 2014 Kurento (http://kurento.org/)
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *   http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *
- */
 @CHARSET "UTF-8";
 
 html {
@@ -22,7 +6,9 @@ html {
 }
 
 body {
-	padding-top: 40px;
+	font: 13px/20px "Lucida Grande", Tahoma, Verdana, sans-serif;
+	color: #404040;
+	background: #0e2a4c;
 }
 
 video, #console {
@@ -32,7 +18,7 @@ video, #console {
 	color: #555;
 	background-color: #fff;
 	background-image: none;
-	border: 1px solid #ccc;
+	border: 1px solid #0e2a4c;
 	border-radius: 4px;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
@@ -52,14 +38,27 @@ video, #console {
 	float: left;
 }
 
-#videoBig {
+/*#videoBig {
 	width: 640px;
 	height: 480px;
 	top: 0;
 	left: 0;
 	z-index: 1;
+}*/
+#videoBig {
+	width: 100%;
+	height: auto;
+	/*border: solid 1px red;*/
 }
-
+div#videoSmall {
+	 position: absolute;
+	 right: 15px;
+	 top: 15px;
+	 z-index: 10;
+	 padding: 0px;
+	 width: 30%;
+}
+/*
 div#videoSmall {
 	width: 240px;
 	height: 180px;
@@ -70,10 +69,14 @@ div#videoSmall {
 	cursor: pointer;
 	z-index: 10;
 	padding: 0px;
-}
+}*/
 
 div.dragged {
 	cursor: all-scroll !important;
 	border-color: blue !important;
 	z-index: 10 !important;
+}
+
+.video-container{
+	height: calc(100vh - 51px);
 }
