--- a/src/main/resources/static/css/kurento.css
+++ b/src/main/resources/static/css/kurento.css
@@ -33,10 +33,10 @@ video, #console {
 	height: 175px;
 }
 
-#videoContainer {
+/*#videoContainer {
 	position: absolute;
 	float: left;
-}
+}*/
 
 /*#videoBig {
 	width: 640px;
@@ -57,6 +57,15 @@ div#videoSmall {
 	 z-index: 10;
 	 padding: 0px;
 	 width: 30%;
+}
+.videoMask {
+	position: absolute;
+	top: 0px;
+	z-index: 11;
+	width: 100%;
+	height: 100%;
+	background: url("../img/BG.png") no-repeat;
+	background-size:100%;
 }
 /*
 div#videoSmall {
